# Hello-Python

./: .coverage  .env.development  .env.example  .env.production  .env.staging  .gitignore  README.md  click-demo.spec  example.db  project-name.spec  pyproject.toml  test.db  test_executable.bat
data/: input.csv  output.csv
docs/: auto_database_initialization.md  db_module_standalone_usage.md  multi_database_support.md
examples/: click_demo_guide.py  db_auto_init_example.py  db_example.py  db_multi_database_example.py  db_standalone_example.py  db_switch_database_example.py  env_config_demo.py  pydantic_validation_demo.py
src/: click_demo.py  config.py  data_processor.py  logger.py  main.py  models.py
src/config/: __init__.py  logging_config.py  settings.py
src/db/: __init__.py  config.py  crud.py  database.py  decorators.py  example_models.py  models.py  standalone_config.py
tests/: README.md  test_cli.py  test_click_demo.py  test_config.py  test_data_processor.py  test_database.py  test_db.py  test_db_simple.py  test_env_config.py  test_logger.py  test_pydantic_validation.py  test_runner.py
tests/config/: test_logging_config.py  test_settings.py
tests/db/: test_database.py  test_simple.py
