[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Hello-Python"
version = "0.1.0"
description = "A sample Python project"
authors = [{name = "Taoweidong", email = "taowd@outlook.com"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "loguru>=0.7.0",
    "click>=8.1.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.0.0"
]

[project.scripts]
Hello-Python = "src.main:cli"
build-dist = "build.create_dist_zip:create_dist_zip"